# lmms-mcp-server

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: create_demo_project.py
src/lmms_mcp/: __init__.py  cli.py  server.py  theory.py
src/lmms_mcp/models/: __init__.py  note.py  pattern.py  project.py  track.py
src/lmms_mcp/tools/: __init__.py  audio_analysis.py  automation.py  bb.py  effects.py  filters.py  patterns.py  project.py  sf2.py  synths.py  tracks.py  versioning.py  visualization.py  voice.py
src/lmms_mcp/xml/: __init__.py  parser.py  writer.py
tests/: README.md  __init__.py  conftest.py  test_automation.py  test_effects.py  test_filters.py  test_integration.py  test_models.py  test_patterns.py  test_project.py  test_synths.py  test_theory.py  test_tracks.py  test_voice.py  test_xml.py
