[project]
name = "lmms-mcp"
version = "0.1.0"
description = "MCP server for LMMS music production with Claude AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "lxml>=5.0",
]

[project.optional-dependencies]
audio = [
    "librosa>=0.10",
    "soundfile>=0.12",
    "sounddevice>=0.4",
    "crepe>=0.0.16",
]
theory = [
    "music21>=9.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]
all = [
    "lmms-mcp[audio,theory,dev]",
]

[project.scripts]
lmms-mcp = "lmms_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lmms_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
